k8s/deployment.yml
### Client
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-service
  template:
    metadata:
      labels:
        app: client-service
    spec:
      containers:
        - name: client
          image: art-board-client:latest
          imagePullPolicy: IfNotPresent
          command: ["npm"]
          args: ["run", "start"]
          ports:
            - containerPort: 3000
---
### http server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-service
  template:
    metadata:
      labels:
        app: http-service
    spec:
      containers:
        - name: http-deployment
          image: art-board-server:latest
          imagePullPolicy: IfNotPresent
          command: ["npm"]
          args: ["run", "start"]
          ports:
            - containerPort: 8080
---
## websocket server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: websocket-service
  template:
    metadata:
      labels:
        app: websocket-service
    spec:
      containers:
      - name: websocket-deployment
        image: art-board-server:latest
        imagePullPolicy: IfNotPresent
        command: ["npm"]
        args: ["run", "start"]
        ports:
          - containerPort: 8080
          - containerPort: 8081
---
## Redis
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
---
### MariaDB
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:latest
          ports:
            - containerPort: 3306
